--- a/CollegeCareerApp/CCApp/templates/signup.html
+++ b/CollegeCareerApp/CCApp/templates/signup.html
@@ -11,50 +11,102 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                {%csrf_token%}
 
-                <form class="mx-1 mx-md-4">
+                <form class="mx-1 mx-md-4" method="post" action="{%url 'signup'%}">
 
+                 <div class="form-group">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="text" id="form3Example1c" class="form-control" />
-                      <label class="form-label" for="form3Example1c">Your Name</label>
+                      <input type="text" id="form3Example1c" class="form-control" name="fname" />
+                      <label class="form-label" for="form3Example1c">First Name</label>
                     </div>
                   </div>
+                  </div>
 
+
+                 <div class="form-group">
+                  <div class="d-flex flex-row align-items-center mb-4">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <div class="form-outline flex-fill mb-0">
+                      <input type="text" id="form3Example1xc" class="form-control" name="lname" />
+                      <label class="form-label" for="form3Example1xc">Last Name</label>
+                    </div>
+                  </div>
+                 </div>
+
+
+                 <div class="form-group">
+                   <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="col-md-6 mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+
+                     <label class="form-label" for="form3Example1xc"  name="gender">Gender</label>
+                      <select class="select">
+                      <option value="1">Female</option>
+                      <option value="2">Male</option>
+                      <option value="3">Other</option>
+                    </select>
+
+                     </div>
+                  </div>
+                 </div>
+
+
+
+                 <div class="form-group">
+                  <div class="col-md-6 mb-4">
+                    <div class="form-outline flex-fill mb-0 input-group date" id="datepicker">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <input type="text" class="form-control" id="date" name="DOB"/>
+                      <label for="date" class="form-label">DateofBirth</label>
+                    </div>
+                  </div>
+                 </div>
+
+
+
+                 <div class="form-group">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="email" id="form3Example3c" class="form-control" />
-                      <label class="form-label" for="form3Example3c">Your Email</label>
+                      <input type="text" id="form3Example3c" class="form-control" name="email"/>
+                      <label class="form-label" for="form3Example3c">Email</label>
                     </div>
                   </div>
+                 </div>
 
+
+                 <div class="form-group">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="password" id="form3Example4c" class="form-control" />
+                      <input type="password" id="form3Example4c" class="form-control" name="password"/>
                       <label class="form-label" for="form3Example4c">Password</label>
                     </div>
                   </div>
+                 </div>
 
+
+
+                 <div class="form-group">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="password" id="form3Example4cd" class="form-control" />
+                      <input type="password" id="form3Example4cd" class="form-control" name="password" />
                       <label class="form-label" for="form3Example4cd">Repeat your password</label>
                     </div>
                   </div>
+                 </div>
 
-                  <div class="form-check d-flex justify-content-center mb-5">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                    <label class="form-check-label" for="form2Example3c">
-                      I agree all statements in <a href="#!">Terms of service</a>
-                    </label>
+
+
+                 <div class="form-group">
+                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                    <button type="submit" class="btn btn-primary btn-lg">Register</button>
                   </div>
 
-                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">Register</button>
                   </div>
 
                 </form>
