Third commit Still to configure the the pyAHP library but managed to sort out the frontend for logins and registration

--- a/CollegeCareerApp/CCApp/templates/index.html
+++ b/CollegeCareerApp/CCApp/templates/index.html
@@ -1,6 +1,29 @@
 {%extends 'template.html'%}
 
 {%block content%}
-<h1>Welcome To College And Career Paths</h1>
-<h2> How can we help you today</h2>
+<style>
+
+<</style>
+
+<h2> How can we help you today?</h2>
+<p>
+   Undecided about your College and Career prosepects? Then we have the
+    perfect solution to aliviate your concerns.
+</p>
+ <div class="split left">
+  <div class="centered">
+
+    <h2>College Selection</h2>
+    <p>S</p>
+  </div>
+</div>
+
+<div class="split right">
+  <div class="centered">
+
+    <h2>Career Path</h2>
+    <p>Some text here too.</p>
+  </div>
+</div>
+
 {%endblock%}
