--- a/CollegeCareerApp/CCApp/templates/login.html
+++ b/CollegeCareerApp/CCApp/templates/login.html
@@ -6,11 +6,12 @@
 <!--Login-->
 <div class="container py-5">
   <h1>Login</h1>
-  <form method="POST">
-    {% csrf_token %}
-    {{ login_form|crispy }}
-    <button class="btn btn-primary" type="submit">Login</button>
-  </form>
+   <form method="post" class="from-group">
+	{% csrf_token %}
+	{{form|crispy}}
+	<p>Don't have an accoount? Create one <a href="/register">here</a></p>
+	<button type="submit" class="btn btn-success">Login</button>
+    </form>
   <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
 </div>
 
