--- a/CollegeCareerApp/CCApp/templates/collegesl.html
+++ b/CollegeCareerApp/CCApp/templates/collegesl.html
@@ -1,74 +1,85 @@
+
 {%extends 'template.html'%}
 
 {%block content%}
+
+
+
 <div class="container">
-		<div class="criteria">
-			<h2>College Criteria Selection</h2>
-			<div>
-				<label for="criteria">Criteria:</label>
-				<input type="text" id="criteria" name="criteria">
-			</div>
-			<div>
-				<label for="weight">Weight:</label>
-				<input type="text" id="weight" name="weight">
-			</div>
-			<button type="button" id="add-criteria">Add Criteria</button>
-			<table id="criteria-table">
-				<thead>
-					<tr>
-						<th>Criteria</th>
-						<th>Weight</th>
-					</tr>
-				</thead>
-				<tbody>
-				</tbody>
-			</table>
-		</div>
-		<div class="alternatives">
-			<h2>Selection of Alternatives</h2>
-			<div>
-				<label for="alternative">Alternative:</label>
-				<input type="text" id="alternative" name="alternative">
-			</div>
-			<div>
-				<label for="importance-list">Importance List:</label>
-				<table id="importance-list">
-					<thead>
-						<tr>
-							<th>Criteria</th>
-							<th>Importance</th>
-						</tr>
-					</thead>
-					<tbody>
-					</tbody>
-				</table>
-			</div>
-			<button type="button" id="add-alternative">Add Alternative</button>
-			<table id="alternatives-table">
-				<thead>
-					<tr>
-						<th>Alternative</th>
-						<th>Score</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>--</td>
-						<td>--</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<div class="consistency-ratios">
-			<h2>Consistency Ratios</h2>
-			<table>
-				<thead>
-					<tr>
-						<th>Criteria</th>
-					</tr>
-				</thead>
-			</table>
-		</div>
+    <form method="POST" ACTION="">
+        {%csrf_token%}
+        <h3>College Selection AHP Form</h3>
+        <div id="criteria-list">
+            <p>Select the criteria most important to you.Select at least 3 </p>
+            <input type="checkbox" name="price" value="Price" CHECKED>Price</input>
+            <input type="checkbox" name="location" value="Location">Location</input>
+            <input type="checkbox" name="reputation" value="Reputation">Reputation</input>
+            <input type="checkbox" name="security" value="Security">Security</input>
+            <input type="checkbox" name="campus type" value="Campus-type">Campus Type</input>
+            <input type="checkbox" name="total_programs" value="Total programs">Total Programs</input>
+        </div>
+        <div class="criteria-comparision">
+          <div>
+            <p>For this section select which criterion is more important to you value more than the other in every pair comparision
+                From there rank how much more importatnt one criterion is to the other on a scale of 1-9.
+                The table below describes what each number represents in terms of relative importance
+            </p>
+          </div>
+            <div >
+            <table class="demo-relative-scale">
+                <thead>
+                    <th>Rating</th>
+                    <th>Definition</th>
+                </thead>
+                <tr>
+                    <td>1</td>
+                    <td>Equal importance</td>
+                </tr>
+                  </thead>
+                <tr>
+                    <td>3</td>
+                    <td>Moderately more important</td>
+                </tr>
+                  </thead>
+                <tr>
+                    <td>5</td>
+                    <td>Strongly more important</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Very strongly more important</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Extremely more important</td>
+                </tr>
+                <tr>
+                    <td>2,4,6,8</td>
+                    <td>Intermediate values</td>
+                </tr>
+                <tr>
+                    <td>1/2, 1/3, 1/4, 1/5, 1/6, 1/7, 1/8, 1/9</td>
+                    <td>Inverse values</td>
+                </tr>
+            </table>
+            </div>
+            <input type="radio" name="equal-importance">
+        </div>
+
+
+
+         <div id="college-list">
+            <p>Select at least 3 ideal colleges/universities  from the list </p>
+            <input type="checkbox" name="UB" value="University of Botswana" CHECKED>University of Botswana</input>
+            <input type="checkbox" name="BIUST" value="BIUST" CHECKED>Botswana International University of Science & Technology</input>
+            <input type="checkbox" name="Botho" value="Botho" checked>Botho University
+            <input type="checkbox" name="BUAN" value="BUAN">Botswana Univeristy of Agriculture & Natural Resources</input>
+            <input type="checkbox" name="BAC" value="BAC">Botswana Accountacy College</input>
+            <input type="checkbox" name="Limkonkwing" value="Limkonkwing">Limkonkwing Unversity of Creative Technology</input>
+            <input type="checkbox" name="IDM" value="IDM">Institute of Development and Management</input>
+            <input type="checkbox" name="GUC" value="GUC">Gaborone University College</input>
+        </div>
+    </form>
 </div>
 
 {%endblock%}
